# BachelorProject

./: .eslintrc.cjs  .prettierrc  README.md  docker-compose.yml  index.html  package-lock.json  package.json  package.json.encrypted  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-wasm/: Cargo.toml
src-wasm/src/: aes.rs  lib.rs  rsa.rs
src-wasm/src/aes/: utils.rs
src/components/: EncryptDialog.tsx  Example.tsx  File.tsx  FileExplorer.tsx  FileMenu.tsx  FloatingActionButton.tsx  Folder.tsx  GenerateKeyDialog.tsx  ImportKeyDialog.tsx  KeyDialog.tsx  KeyMenu.tsx  ProcessIndicator.tsx  SettingsButton.tsx  SettingsDialog.tsx
src/components/FileExplorer/: File.tsx  FileExplorer.tsx  Folder.tsx
src/components/KeyMenu/: KeyMenu.tsx  KeyMenuItem.tsx
src/context/: SelectedFileContext.tsx  StoredKeysContext.tsx  settingsContext.tsx
src/encryption/: EncryptionHandler.ts  EncryptionType.ts  KeyGenerator.ts  Types.ts  encodeDecode.ts
src/encryption/AES/: decrypt.ts  encrypt.ts  index.ts  utils.ts
src/encryption/RSA/: index.ts  keys.ts
src/encryption/workers/: AES-D-js.ts  AES-D-wasm.ts  AES-D.ts  AES-E-js.ts  AES-E-wasm.ts  AES-E.ts  RSA-D-js.ts  RSA-D-wasm.ts  RSA-D.ts  RSA-E-js.ts  RSA-E-wasm.ts  RSA-E.ts  types.ts
src/persistence/: StoredKeys.tsx  settings.tsx
src/types/: Encryption.ts  Encryption.tsx
test/: App.test.tsx
test/components/: EncryptDialog.test.tsx  Example.test.tsx  FileExplorer.test.tsx  FileMenu.test.tsx
test/encryption/: AES.test.ts  RSA.disabled.ts  RSA.test.ts  encodeDecode.test.ts
(+2 files in other folders)
