[package]
name = "src-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
sha1_smol = "1.0.0"
ibig = "0.3.6"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }